corrindo erro do relacionamento de chamados, utilizando todos atributos em um unica entidade

--- a/src/main/resources/templates/ticket/cadastrarChamado.html
+++ b/src/main/resources/templates/ticket/cadastrarChamado.html
@@ -10,39 +10,39 @@
     <title>Cadastrar Chamado</title>
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.index.css" media="screen,projection" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
+
+        .container-fluid {
+            padding: 30px;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-weight: bold;
+        }
+
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+
+        .additional-fields {
+            display: none;
+        }
+    </style>
 </head>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #f8f9fa;
-    }
-
-    .container-fluid {
-        padding: 30px;
-    }
-
-    .form-group {
-        margin-bottom: 20px;
-    }
-
-    label {
-        font-weight: bold;
-    }
-
-    .btn-primary {
-        background-color: #007bff;
-        border-color: #007bff;
-    }
-
-    .btn-primary:hover {
-        background-color: #0056b3;
-        border-color: #0056b3;
-    }
-
-    .additional-fields {
-        display: none;
-    }
-</style>
 
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -54,7 +54,6 @@
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0" th:if="${isAuthenticated}">
             <i class="fas fa-user"></i> <span th:text="${userEmail}" style="color: white;"></span>
-
         </form>
         <!-- Navbar-->
         <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
@@ -69,7 +68,6 @@
                         </li>
                         <li><button class="dropdown-item" type="submit">Sair</button></li>
                     </form>
-
                 </ul>
             </li>
         </ul>
@@ -129,7 +127,7 @@
                                     style="margin-right: 5px;"></i></div>
                             Tables
                         </a>
-                        <div class="sb-sidenav-menu-heading">Admistrador</div>
+                        <div class="sb-sidenav-menu-heading">Administrador</div>
                         <a class="nav-link" href="tables.html">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-users" style="margin-right: 5px;"></i>
                             </div>
@@ -152,6 +150,7 @@
                         <li class="breadcrumb-item active">Tipos de chamados</li>
                     </ol>
                     <form th:action="@{/chamado/salvar}" method="post" class="was-validated">
+                        <!-- Campos básicos -->
                         <div class="form-group">
                             <label for="titulo">Título:</label>
                             <input type="text" class="form-control" id="titulo" name="titulo" required>
@@ -162,29 +161,13 @@
                         </div>
                         <div class="form-group">
                             <label for="supervisor">Nome do supervisor(a):</label>
-                            <textarea class="form-control" id="supervisor" name="supervisor" required></textarea>
+                            <input type="text" class="form-control" id="supervisor" name="supervisor" required>
                         </div>
-                        <div class="form-group">
-                            <label for="tipoDeChamado">Tipo de Chamado:</label>
-                            <select class="form-control" id="tipoDeChamado" name="tipoDeChamado" required
-                                    onchange="showAdditionalFields()">
-                                <option value="0">Selecione</option>
-                                <option value="1">INFORMATICA</option>
-                                <option value="2">JURIDICO</option>
-                                <option value="3">FINANCEIRO</option>
-                            </select>
-                        </div>
-
-                        <!-- Additional fields -->
-                        <div id="additionalFields"></div>
 
 
 
                         <button type="submit" class="btn btn-primary">Salvar</button>
-
                     </form>
-
-
                 </div>
             </main>
             <footer class="py-4 bg-light mt-auto">
@@ -205,51 +188,10 @@
         crossorigin="anonymous"></script>
     <script src="materialize/js/materialize.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script src="materialize/assets/demo/chart-area-demo.js"></script>
-    <script src="materialize/assets/demo/chart-bar-demo.js"></script>
-    <script src="materialize/assets/demo/chart-pie-demo.js"></script>
-    <script>
-        function showAdditionalFields() {
-            const tipoDeChamado = document.getElementById('tipoDeChamado').value;
-            const additionalFields = document.getElementById('additionalFields');
-            additionalFields.innerHTML = '';
+<!-- Campos adicionais de acordo com o tipo de chamado -->
 
-            if (tipoDeChamado === '1') {
-                additionalFields.innerHTML = `
-                        <div class="form-group">
-                            <label for="problema">Problema:</label>
-                            <input type="text" class="form-control" id="problema" name="problema" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="equipamento">Equipamento:</label>
-                            <input type="text" class="form-control" id="equipamento" name="equipamento" required>
-                        </div>
-                    `;
-            } else if (tipoDeChamado === '2') {
-                additionalFields.innerHTML = `
-                        <div class="form-group">
-                            <label for="advogado">Advogado:</label>
-                            <input type="text" class="form-control" id="advogado" name="advogado" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="processo">Processo:</label>
-                            <input type="text" class="form-control" id="processo" name="processo" required>
-                        </div>
-                    `;
-            } else if (tipoDeChamado === '3') {
-                additionalFields.innerHTML = `
-                        <div class="form-group">
-                            <label for="valor">Valor:</label>
-                            <input type="number" class="form-control" id="valor" name="valor" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="conta">Conta:</label>
-                            <input type="text" class="form-control" id="conta" name="conta" required>
-                        </div>
-                    `;
-            }
-        }
-    </script>
+
+
 </body>
 
 </html>
