--- a/src/main/resources/templates/ticket/searchchamado.html
+++ b/src/main/resources/templates/ticket/searchchamado.html
@@ -171,57 +171,57 @@
                                     <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Nome</th>
+                                            <th th:if="${isAdmin}">Nome</th>
                                             <th>Título</th>
                                             <th>Descrição</th>
                                             <th>Status</th>
                                             <th>Tipo do Chamado</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="chamado, rowStat : ${chamados}" class="fade-in">
-                                    <td th:text="${chamado.id}">ID</td>
-                                    <td th:text="${chamado.colaborador.nome}">Nome</td>
-                                    <td th:text="${chamado.titulo}">Título</td>
-                                    <td th:text="${chamado.descricao}">Descrição</td>
-                                    <td>
-                                        <span
-                                            th:classappend="${chamado.status == 'aberto'} ? 'badge bg-success' : 'badge bg-danger'">
-                                            <span th:text="${chamado.status}"></span>
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span th:switch="${chamado.tipoDeChamado}">
-                                            <span th:case="1" class="badge bg-primary">Informática</span>
-                                            <span th:case="2" class="badge bg-orange">Financeiro</span>
-                                            <span th:case="3" class="badge bg-info">Jurídico</span>
-                                        </span>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </main>
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid px-4">
-                    <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; Davi Website 2024</div>
-                        <div>
-                            <a href="#">Privacy Policy</a>
-                            &middot;
-                            <a href="#">Terms &amp; Conditions</a>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr th:each="chamado, rowStat : ${chamados}" class="fade-in">
+                                            <td th:text="${chamado.id}">ID</td>
+                                            <td th:if="${isAdmin}" th:text="${chamado.colaborador.nome}">Nome</td>
+                                            <td th:text="${chamado.titulo}">Título</td>
+                                            <td th:text="${chamado.descricao}">Descrição</td>
+                                            <td>
+                                                <span th:classappend="${chamado.status == 'aberto'} ? 'badge bg-success' : 'badge bg-danger'">
+                                                    <span th:text="${chamado.status}"></span>
+                                                </span>
+                                            </td>
+                                            <td>
+                                                <span th:switch="${chamado.tipoDeChamado}">
+                                                    <span th:case="1" class="badge bg-primary">Informática</span>
+                                                    <span th:case="2" class="badge bg-orange">Financeiro</span>
+                                                    <span th:case="3" class="badge bg-info">Jurídico</span>
+                                                </span>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
-                    </div>
+                    </main>
+                    <footer class="py-4 bg-light mt-auto">
+                        <div class="container-fluid px-4">
+                            <div class="d-flex align-items-center justify-content-between small">
+                                <div class="text-muted">Copyright &copy; Davi Website 2024</div>
+                                <div>
+                                    <a href="#">Privacy Policy</a>
+                                    &middot;
+                                    <a href="#">Terms &amp; Conditions</a>
+                                </div>
+                            </div>
+                        </div>
+                    </footer>
                 </div>
-            </footer>
+            </div>
         </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-    <script src="materialize/js/materialize.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-</body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+        <script src="materialize/js/materialize.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    </body>
 
-</html>
+    </html>
