add busca por id

--- a/src/main/resources/templates/ticket/searchchamado.html
+++ b/src/main/resources/templates/ticket/searchchamado.html
@@ -176,6 +176,7 @@
                                             <th>Descrição</th>
                                             <th>Status</th>
                                             <th>Tipo do Chamado</th>
+                                            <th>Ação</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -196,6 +197,12 @@
                                                     <span th:case="3" class="badge bg-info">Jurídico</span>
                                                 </span>
                                             </td>
+                                            <th>
+                                                <span style="background-color: #00b32d; color: white; cursor: pointer; padding: 5px; border-radius: 20px;">
+                                                    <i class="fas fa-circle" style="color: #00b32d;"></i>analisar
+                                                </span>
+                                            </th>
+                                            
                                         </tr>
                                     </tbody>
                                 </table>
