--- a/src/main/resources/templates/ticket/cadastrarChamado.html
+++ b/src/main/resources/templates/ticket/cadastrarChamado.html
@@ -268,12 +268,12 @@
                         <input type="text" class="form-control" id="equipamento" name="equipamento" required>
                     </div>
                 `;
-            } else if (tipoChamado == "2") {
+            } else if (tipoChamado == "2") {//botar restrição de intenger, erro do intenger limitar no form
                 additionalFields.innerHTML += `
-<div class="form-group">
-    <label for="valor">Valor:</label>
-    <input type="number" class="form-control" id="valor" name="valor" required min="0" max="50000">
-</div>
+                    <div class="form-group">
+                        <label for="valor">Valor:</label>
+                        <input type="number" class="form-control" id="valor" name="valor" required min="0" max="50000">
+                    </div>
                     <div class="form-group">
                         <label for="conta">Conta:</label>
                         <input type="text" class="form-control" id="conta" name="conta" required>
