--- a/src/main/resources/templates/ticket/detalhesChamados.html
+++ b/src/main/resources/templates/ticket/detalhesChamados.html
@@ -1,37 +1,323 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
+
 <head>
-    <title>Detalhes do Chamado</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Detalhes do chamado</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous" />
+    <link type="text/css" rel="stylesheet" href="/materialize/css/materialize.index.css" media="screen,projection" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+
+    <style>
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .fade-in {
+            animation: fadeIn 0.6s ease-in-out forwards;
+            /* ajuste a duração e a função de temporização conforme necessário */
+        }
+
+        /* Estilos para a barra de pesquisa */
+        .search-bar {
+            position: absolute;
+            top: 0;
+            right: 20px;
+            margin-top: 10px;
+        }
+
+        .search-input {
+            width: 250px;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        .search-btn {
+            padding: 8px 12px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        .search-btn:hover {
+            background-color: #0056b3;
+        }
+    </style>
+
 </head>
-<body>
-    <div class="container">
-        <h1>Detalhes do Chamado</h1>
 
-        <div th:if="${error}">
-            <p th:text="${error}"></p>
+<body class="sb-nav-fixed">
+    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <!-- Navbar Brand-->
+        <a class="navbar-brand ps-3" href="index.html">DEMO</a>
+        <!-- Sidebar Toggle-->
+        <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
+                class="fas fa-bars"></i></button>
+        <!-- Navbar Search-->
+        <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0" th:if="${isAuthenticated}">
+            <i class="fas fa-user"></i> <span th:text="${userEmail}" style="color: white;"></span>
+        </form>
+        <!-- Navbar-->
+        <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="profile">Settings</a></li>
+                    <form th:action="@{/logout}" method="post">
+                        <li>
+                            <hr class="dropdown-divider" />
+                        </li>
+                        <li><button class="dropdown-item" type="submit">Sair</button></li>
+                    </form>
+                </ul>
+            </li>
+        </ul>
+        <!-- Barra de pesquisa -->
+    </nav>
+    <div id="layoutSidenav">
+        <div id="layoutSidenav_nav">
+            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                <div class="sb-sidenav-menu">
+                    <div class="nav">
+                        <div class="sb-sidenav-menu-heading">Core</div>
+                        <a class="nav-link" href="/principal">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-chart-simple"
+                                    style="margin-right: 10px;"></i></div>
+                            Dashboard
+                        </a>
+                        <div class="sb-sidenav-menu-heading">Interface</div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-bars" style="margin-right: 10px;"></i>
+                            </div>
+                            Chamados
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="/chamado"><i class="fa-solid fa-plus"
+                                        style="margin-right: 10px;"></i>Novo chamado</a>
+                                <a class="nav-link" href="/consultar"><i class="fa-solid fa-magnifying-glass"
+                                        style="margin-right: 10px;"></i>Consultar chamado</a>
+                            </nav>
+                        </div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
+                            aria-expanded="false" aria-controls="collapsePages">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-clipboard-user"
+                                    style="margin-right: 10px;"></i></div>
+                            Gerenciamento
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapsePages" aria-labelledby="headingTwo"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a class="nav-link" href="layout-static.html"><i class="fa-solid fa-address-card"
+                                        style="margin-right: 10px;"></i>Novo Colaborador</a>
+                                <a class="nav-link" href="layout-static.html"><i class="fa-solid fa-magnifying-glass"
+                                        style="margin-right: 10px;"></i>Consultar Colaborador</a>
+                            </nav>
+                        </div>
+                        <div class="sb-sidenav-menu-heading">Addons</div>
+                        <a class="nav-link" href="charts.html">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-chart-pie"
+                                    style="margin-right: 5px;"></i></div>
+                            Charts
+                        </a>
+                        <a class="nav-link" href="tables.html">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-clipboard-list"
+                                    style="margin-right: 5px;"></i></div>
+                            Tables
+                        </a>
+                        <div class="sb-sidenav-menu-heading">Admistrador</div>
+                        <a class="nav-link" href="tables.html">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-users" style="margin-right: 5px;"></i>
+                            </div>
+                            Gerenciamento user
+                        </a>
+                    </div>
+                </div>
+                <div class="sb-sidenav-footer">
+                    <div class="small">Logado no:</div>
+                    Sistema Demo
+                </div>
+            </nav>
         </div>
+        <div id="layoutSidenav_content">
+            <main>
+                <div class="container">
+                    <div class="search-bar">
+                        <input type="text" id="searchInput" class="search-input" placeholder="Buscar por código..." oninput="filterTable()">
+                        <button class="search-btn" onclick="filterTable()">Buscar</button>
+                    </div>
+                    <h1 class="listada">Lista de Chamados</h1>
 
-        <div th:if="${chamado}">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Título</th>
-                        <th>Descrição</th>
-                        <th>Status</th>
-                        <!-- Adicione outras colunas conforme necessário -->
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="fade-in">
-                        <td th:text="${chamado.titulo}">Título</td>
-                        <td th:text="${chamado.descricao}">Descrição</td>
-                        <td th:text="${chamado.status}">Status</td>
-                        <!-- Adicione outras células conforme necessário -->
-                    </tr>
-                </tbody>
-            </table>
+                    <div th:if="${error}">
+                        <p th:text="${error}"></p>
+                    </div>
+
+                    <div th:if="${chamado}">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th th:if="${isAdmin}">Nome</th>
+                                    <th>Título</th>
+                                    <th>Descrição</th>
+                                    <th>Status</th>
+                                    <!-- Adicione outras colunas conforme necessário -->
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="fade-in">
+                                    <td th:if="${isAdmin}" th:text="${chamado.colaborador.nome}">Nome</td>
+                                    <td th:text="${chamado.titulo}">Título</td>
+                                    <td th:text="${chamado.descricao}">Descrição</td>
+                                    <td th:text="${chamado.status}">Status</td>
+                                    <!-- Adicione outras células conforme necessário -->
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div>
+                        <h2>separa</h2>
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Codigo</th>
+                                    <th th:if="${isAdmin}">Nome</th>
+                                    <th>Título</th>
+                                    <th>Descrição</th>
+                                    <th>Status</th>
+                                    <th>Tipo do Chamado</th>
+                                    <th>Ação</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="chamado, rowStat : ${chamados}" class="fade-in">
+                                    <td class="codigoChamado" th:text="${chamado.codigoBusca}">CODIGO</td>
+                                    <td th:if="${isAdmin}" th:text="${chamado.colaborador.nome}">Nome</td>
+                                    <td th:text="${chamado.titulo}">Título</td>
+                                    <td th:text="${chamado.descricao}">Descrição</td>
+                                    <td>
+                                        <span th:classappend="${chamado.status == 'aberto'} ? 'badge bg-success' : 'badge bg-danger'">
+                                            <span th:text="${chamado.status}"></span>
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <span th:switch="${chamado.tipoDeChamado}">
+                                            <span th:case="1" class="badge bg-primary">Informática</span>
+                                            <span th:case="2" class="badge bg-orange">Financeiro</span>
+                                            <span th:case="3" class="badge bg-info">Jurídico</span>
+                                        </span>
+                                    </td>
+                                    <td>
+                                        <a th:href="@{/detalhes/{id}(id=${chamado.id})}">Analisar</a>
+                                    </td>                            
+                                               
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </main>
+            <footer class="py-4 bg-light mt-auto">
+                <div class="container-fluid px-4">
+                    <div class="d-flex align-items-center justify-content-between small">
+                        <div class="text-muted">Copyright &copy; Davi Website 2024</div>
+                        <div>
+                            <a href="#">Privacy Policy</a>
+                            &middot;
+                            <a href="#">Terms &amp; Conditions</a>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var codigoCells = document.querySelectorAll('.codigoChamado');
+
+            codigoCells.forEach(function (codigoCell) {
+                var codigoText = codigoCell.textContent.trim();
+
+                // Exibir apenas os primeiros 6 caracteres
+                var shortenedCodigo = codigoText.substring(0, 6);
+
+                // Adicionar os três pontos se o código for maior que 6 caracteres
+                if (codigoText.length > 6) {
+                    shortenedCodigo += '';
+                }
+
+                // Substituir o conteúdo da célula pelo código encurtado
+                codigoCell.textContent = shortenedCodigo;
+            });
+        });
+    </script>
+    <script>
+        function filterTable() {
+            var input, filter, table, tr, td, i, txtValue;
+            input = document.getElementById("searchInput");
+            filter = input.value.toUpperCase();
+            table = document.querySelector(".table");
+            tr = table.getElementsByTagName("tr");
+
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[0]; // Coluna do Código
+
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
+
+    <script>window.addEventListener('DOMContentLoaded', event => {
+
+            // Toggle the side navigation
+            const sidebarToggle = document.body.querySelector('#sidebarToggle');
+            if (sidebarToggle) {
+                // Uncomment Below to persist sidebar toggle between refreshes
+                // if (localStorage.getItem('sb|sidebar-toggle') === 'true') {
+                //     document.body.classList.toggle('sb-sidenav-toggled');
+                // }
+                sidebarToggle.addEventListener('click', event => {
+                    event.preventDefault();
+                    document.body.classList.toggle('sb-sidenav-toggled');
+                    localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
+                });
+            }
+
+        });</script>
 </body>
+
 </html>
